--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="robots" content="index, follow">
     <meta name="description" content="max-sport es la mejor tienda de zapatillas y productos deportivos, encuentra zapatillas, pelotas, medallas, trofeos y todo tipo de productos deportivos.">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
