--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="robots" content="index, follow">
     <meta name="description" content="max-sport es la mejor tienda de zapatillas y productos deportivos, encuentra zapatillas, pelotas, medallas, trofeos y todo tipo de productos deportivos.">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>max-sport</title>
   </head>
