--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="robots" content="index, follow">
     <meta name="description" content="max-sport es la mejor tienda de zapatillas y productos deportivos, encuentra zapatillas, pelotas, medallas, trofeos y todo tipo de productos deportivos.">
+    <meta name="description" content="Max-Sport es una tienda de artículos deportivos ubicada en Huancavelica, Perú. Vendemos todo tipo de productos deportivos como medallas, trofeos, zapatillas de todos los modelos, ropa deportiva, accesorios y mucho más, con calidad y buenos precios.">
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>max-sport</title>
-    <link rel="icon" type="image/png" href="/public/logo.png" />
+    <title>MAX SPORT - Zapatillas y Artículos Deportivos</title>
   </head>
   <body>
     <div id="root"></div>
